--- a/04_Map.Rmd
+++ b/04_Map.Rmd
@@ -73,8 +73,9 @@ plot(MI)
   theme(legend.justification.inside = c(0, 0),
         legend.title = element_text(size = 24),
         legend.text = element_text(size = 16),
-        axis.text = element_text(size = 22),
-        axis.title = element_text(size = 24))
+        legend.position = c(0.05 , 0.05),
+        axis.text = element_text(size = 32),
+        axis.title = element_text(size = 32))
 )
 
 ggsave(map_plot,
